Final Cleaned and Organized Copy

--- a/SteamDataVisualization.ipynb
+++ b/SteamDataVisualization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SteamDataVisualization.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPb8KHrA1nXU8N8PlTpHETE",
+      "authorship_tag": "ABX9TyOW1rzojBMM+6UIyAdNI0Wc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,8 @@
       "source": [
         "## What makes a game successful on Steam?\n",
         "We are going to be taking some metrics for games that are played as their success. My scratch notebook is listed here for the sake of completeness, however, I am going to be presenting this notebook for the final walk-through since it is much more 'on point'.\n",
-        "https://colab.research.google.com/drive/1774E_qLCPcVZYCqA9m6UkP8evu0DZrW7?usp=sharing"
+        "\n",
+        "https://github.com/RobDBennett/DS-Unit-1-Build/blob/master/SteamDataShaping.ipynb"
       ]
     },
     {
@@ -81,7 +82,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -117,11 +118,11 @@
       "metadata": {
         "id": "M_sNdRJO5zXg",
         "colab_type": "code",
+        "outputId": "b14e8429-07f7-4fe5-e2dd-5c5750e47064",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b14e8429-07f7-4fe5-e2dd-5c5750e47064"
+        }
       },
       "source": [
         "column_headers= ['id','game','purchase','hours','0']\n",
@@ -129,7 +130,7 @@
         "print(games.shape)\n",
         "games = games.drop(['0'], axis=1)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,6 +146,7 @@
       "metadata": {
         "id": "6YO1TzF152Iz",
         "colab_type": "code",
+        "outputId": "aa35155d-22ff-422b-d2d5-9832f294cb67",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -162,13 +164,12 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "aa35155d-22ff-422b-d2d5-9832f294cb67"
+        }
       },
       "source": [
         "uploaded= files.upload()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -204,18 +205,18 @@
       "metadata": {
         "id": "qGqp0rC_52vr",
         "colab_type": "code",
+        "outputId": "eb2ecddc-b1b6-4db2-e0e9-a52d471400b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        },
-        "outputId": "eb2ecddc-b1b6-4db2-e0e9-a52d471400b5"
+        }
       },
       "source": [
         "steam = pd.read_csv('steam.csv')\n",
         "print(steam.shape)\n",
         "steam.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,11 +400,11 @@
       "metadata": {
         "id": "XOUZ2pFy55yz",
         "colab_type": "code",
+        "outputId": "a03d85dc-0045-4ce1-ca3a-904fbb479724",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "a03d85dc-0045-4ce1-ca3a-904fbb479724"
+        }
       },
       "source": [
         "steam = steam.drop(['english','developer','publisher','platforms','required_age',\n",
@@ -411,7 +412,7 @@
         "                    'appid','average_playtime','median_playtime'],axis=1)\n",
         "steam.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,17 +517,17 @@
       "metadata": {
         "id": "7MKAp-Oz557b",
         "colab_type": "code",
+        "outputId": "da287e77-ac92-42f2-ae2f-6979f77d34f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "da287e77-ac92-42f2-ae2f-6979f77d34f0"
+        }
       },
       "source": [
         "steam = steam.rename(columns={'name':'game','release_date':'release','genres':'genre','positive_ratings':'pos_rate','negative_ratings':'neg_rate','price':'price'})\n",
         "steam.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,18 +651,18 @@
       "metadata": {
         "id": "PBQULaE76zVW",
         "colab_type": "code",
+        "outputId": "99161a1e-80fb-4bce-f181-049449404a16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "99161a1e-80fb-4bce-f181-049449404a16"
+        }
       },
       "source": [
         "new = pd.merge(games, steam, on='game',how='inner')\n",
         "print(new.shape)\n",
         "new.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,18 +792,18 @@
       "metadata": {
         "id": "RoaoJaGC8GPn",
         "colab_type": "code",
+        "outputId": "b4de5eba-f7b1-4662-d1fc-47f67d2ee71a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "b4de5eba-f7b1-4662-d1fc-47f67d2ee71a"
+        }
       },
       "source": [
         "played = new.replace('purchase', np.nan)\n",
         "played = played.dropna()\n",
         "played['game'].value_counts().head(10)"
       ],
-      "execution_count": 103,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -833,17 +834,17 @@
       "metadata": {
         "id": "juohSurwPeGg",
         "colab_type": "code",
+        "outputId": "747f887b-abef-4c5f-b20e-50f9fc5e0d8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "747f887b-abef-4c5f-b20e-50f9fc5e0d8f"
+        }
       },
       "source": [
         "played['counter'] = 1\n",
         "played.head()"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,11 +1016,11 @@
       "metadata": {
         "id": "9RGyuvJSScM4",
         "colab_type": "code",
+        "outputId": "52ea3d6f-391d-4cc3-d9c6-58fec449c712",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "52ea3d6f-391d-4cc3-d9c6-58fec449c712"
+        }
       },
       "source": [
         "for title in titles:\n",
@@ -1028,7 +1029,7 @@
         "print(mean)\n",
         "print(median)"
       ],
-      "execution_count": 84,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,11 +1047,11 @@
       "metadata": {
         "id": "gPdwT2I5Tdqs",
         "colab_type": "code",
+        "outputId": "f2c86d93-6ef4-4274-f01c-324e5171a07d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
-        },
-        "outputId": "f2c86d93-6ef4-4274-f01c-324e5171a07d"
+        }
       },
       "source": [
         "data = {'game': titles}\n",
@@ -1060,7 +1061,7 @@
         "final10['median']=median\n",
         "final10"
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1191,11 +1192,11 @@
       "metadata": {
         "id": "ICAQC5-bVhor",
         "colab_type": "code",
+        "outputId": "0ca660ad-9a3e-4dc0-d2c4-118591af03ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 529
-        },
-        "outputId": "0ca660ad-9a3e-4dc0-d2c4-118591af03ff"
+        }
       },
       "source": [
         "final10 = pd.merge(final10, played.drop(['id','purchase','hours','counter'], axis=1), \n",
@@ -1203,7 +1204,7 @@
         "final10 = final10.drop_duplicates()\n",
         "final10"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1391,11 +1392,11 @@
       "metadata": {
         "id": "1W_Dud2XV6Q6",
         "colab_type": "code",
+        "outputId": "b992242e-0ce1-4b49-fd93-7a5bfa5f9979",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 620
-        },
-        "outputId": "b992242e-0ce1-4b49-fd93-7a5bfa5f9979"
+        }
       },
       "source": [
         "labels = list(final10['game'])\n",
@@ -1428,7 +1429,7 @@
         "fig.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 96,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1450,11 +1451,11 @@
       "metadata": {
         "id": "hBcCCz3iV6XZ",
         "colab_type": "code",
+        "outputId": "b6262503-b26d-4c11-877e-0571b169b38b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 620
-        },
-        "outputId": "b6262503-b26d-4c11-877e-0571b169b38b"
+        }
       },
       "source": [
         "pos = list(final10['pos_rate'])\n",
@@ -1484,7 +1485,7 @@
         "fig.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 97,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1506,11 +1507,11 @@
       "metadata": {
         "id": "CNakFLeMWR_q",
         "colab_type": "code",
+        "outputId": "fa892b8a-f7fa-493a-98fa-eeefc7954b51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "fa892b8a-f7fa-493a-98fa-eeefc7954b51"
+        }
       },
       "source": [
         "purchased = new.replace('play', np.nan)\n",
@@ -1518,7 +1519,7 @@
         "bought = purchased['game'].value_counts().head(10)\n",
         "bought"
       ],
-      "execution_count": 105,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
